[gd_scene load_steps=12 format=3 uid="uid://btlqootllbmyi"]

[ext_resource type="Texture2D" uid="uid://ctm4onc6qj0jm" path="res://scenes/interactions/shop_item/base.png" id="1_mbwks"]
[ext_resource type="Script" uid="uid://b2ymmumljj1oi" path="res://scenes/interactions/shop_item/shop_item.gd" id="1_ryt8a"]
[ext_resource type="PackedScene" uid="uid://ct60dg4e24be8" path="res://components/interaction/_interaction.tscn" id="2_n8yc3"]
[ext_resource type="Shader" uid="uid://chycovuryio5l" path="res://scenes/select.gdshader" id="3_ryt8a"]
[ext_resource type="Texture2D" uid="uid://chgrqc0ex7y3p" path="res://weapons/ally/rifle/static.png" id="4_q5lr7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmctd"]
radius = 12.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nirfi"]
resource_local_to_scene = true
shader = ExtResource("3_ryt8a")
shader_parameter/width = 0
shader_parameter/outline_color = Color(4, 4, 4, 1)
shader_parameter/flickering_speed = 0.0
shader_parameter/minimal_flickering_alpha = 0.0

[sub_resource type="Gradient" id="Gradient_0gq7y"]
colors = PackedColorArray(0.987013, 0.727503, 1.15514e-06, 1, 0.882353, 0.0156863, 0, 0)

[sub_resource type="Gradient" id="Gradient_0piie"]
colors = PackedColorArray(1, 0.557, 0.17, 0.686, 1, 0.557333, 0.17, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wh65r"]
gradient = SubResource("Gradient_0piie")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_n8yc3"]
radius = 7.0

[node name="ShopItem" type="StaticBody2D" node_paths=PackedStringArray("item_sprite")]
script = ExtResource("1_ryt8a")
item_sprite = NodePath("ItemSprite")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mbwks")

[node name="LabelPosition" type="Marker2D" parent="."]
position = Vector2(0, -24)

[node name="InteractionComponent" parent="." instance=ExtResource("2_n8yc3")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponent"]
shape = SubResource("CircleShape2D_rmctd")

[node name="ItemSprite" type="Sprite2D" parent="."]
self_modulate = Color(1.5, 1.5, 1.5, 1)
material = SubResource("ShaderMaterial_nirfi")
texture = ExtResource("4_q5lr7")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
visible = false
emission_shape = 2
emission_sphere_radius = 16.0
direction = Vector2(0, -10)
gravity = Vector2(0, -25)
initial_velocity_max = 40.0
damping_max = 79.601
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_0gq7y")
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
rotation = 0.785398
scale = Vector2(0.436664, 0.436664)
texture = SubResource("GradientTexture2D_wh65r")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n8yc3")

[connection signal="signal_player_entered" from="InteractionComponent" to="." method="_on_player_entered"]
[connection signal="signal_player_exited" from="InteractionComponent" to="." method="_on_player_exited"]
